--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "emailjs-com": "^3.2.0",
@@ -18,6 +19,8 @@
     "react-stripe-checkout": "^2.6.3",
     "section-navigation": "^1.0.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.4.20",
+    "sweetalert2-react-content": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
